Z-index bugs, bugs around deletion, pagination tweaks

--- a/src/main/webapp/studio/static/themes/default/css/databrowser.css
+++ b/src/main/webapp/studio/static/themes/default/css/databrowser.css
@@ -19,6 +19,10 @@
     margin: 5px 25px 0 0;
 }
 
+.modal-open #databrowser_container .dropdown-menu {
+    z-index : 900;
+}
+
 
 .databrowser.emptyContainer{
     border: 1px solid #ddd;
@@ -90,9 +94,11 @@
     position: absolute;
     display: block;
     /* Also transition height to 0 afterwards so it's not visible, but doesn't get in the way of the databrowser */
-    transition: opacity 0.5s ease-out, height 1s linear;
-    -webkit-transition: opacity 0.5s ease-out, height 1s linear;
-    -moz-transition: opacity 0.5s ease-out, height 1s linear;
+    transition: opacity 0.5s ease-out, height 0s ease-out;
+    -webkit-transition: opacity 0.5s ease-out, height 0s ease-out;
+    -moz-transition: opacity 0.5s ease-out, height 0s ease-out;
+    -webkit-transition-delay: 0s, 0.5s;
+    transition-delay: 02, 0.5s;
     height: 0;
     opacity: 0;
     overflow: hidden;
@@ -564,3 +570,4 @@ background-color:#FFFFFF}
         background-color:#FFFFFF}
 
 }
+
